shrinked icon fontsize to make sure icons are not distorted.
visible in ez5 viewoptions.

--- a/src/scss/head.structure.scss
+++ b/src/scss/head.structure.scss
@@ -54,7 +54,7 @@ $button_line_heights: (
 
 $button_icon_font_sizes: (
         mini: 12px,
-        normal: 16px,
+        normal: 14px, //was 16px all the time
         big: 17px,
         bigger: 24px //19px make root menu button looking uneven scaled 21px looks good but is not centered correctly
 );
